--- a/index.html
+++ b/index.html
@@ -1,85 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Insure landing page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+	<title>Insure Landing Page</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<header>
+		<img src="images/logo.svg" alt="Company Logo" class="logo">
+		<nav class="main-nav">
+			<ul>
+				<li><a href="#howwework">HOW WE WORK</a></li>
+				<li><a href="#blog">BLOG</a></li>
+				<li><a href="#account">ACCOUNT</a></li>
+				<li><button class="view-plans-btn">VIEW PLANS</button></li>
+			</ul>
+			
+		</nav>
+	</header>
 
-  How we work
-  Blog
-  Account
-  View plans
+	<main>
+		<section id="hero">
+			<h2>Home Section</h2>
+			<p>Your content goes here.</p>
+		</section>
+	</main>
 
-  Humanizing your insurance.
+	<footer>
+		<p>&copy; 2006 Jasmine. all rights reserved.</p>
+	</footer>
 
-  Get your life insurance coverage easier and faster. We blend our expertise 
-  and technology to help you find the plan that’s right for you. Ensure you 
-  and your loved ones are protected.
+	<script>
+	// javascript code here
+	console.log("Page loaded successfully");
 
-  View plans
-
-  We’re different
-
-  Snappy Process
-
-  Our application process can be completed in minutes, not hours. Don’t get 
-  stuck filling in tedious forms.
-
-  Affordable Prices
-
-  We don’t want you worrying about high monthly costs. Our prices may be low, 
-  but we still offer the best coverage possible.
-
-  People First
-
-  Our plans aren’t full of conditions and clauses to prevent payouts. We make 
-  sure you’re covered when you need it.
-
-  Find out more about how we work
-
-  How we work
-
-  Our company
-
-  How we work
-  Why Insure?
-  View plans
-  Reviews
-
-  Help me
-
-  FAQ
-  Terms of use
-  Privacy policy
-  Cookies
-
-  Contact
-
-  Sales
-  Support
-  Live chat
-
-  Others
-
-  Careers
-  Press
-  Licenses
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+	</script>
 </body>
 </html>
+
